# doc-check

./: .gitignore  pyproject.toml
docs/brainstorms/: 2026-04-22-aeos-ruleset-reverse-derivation-requirements.md  2026-04-22-document-standardization-check-service-requirements.md
docs/plans/: 2026-04-22-001-feat-aeos-docx-check-service-plan.md  2026-04-22-002-feat-aeos-ruleset-derivation-plan.md
rulesets/aeos/: banned_terms.csv  manifest.yaml  structure.yaml  style.yaml  terminology.csv
rulesets/news_publicity/: banned_terms.csv  manifest.yaml  structure.yaml
rulesets/speech/: banned_terms.csv  manifest.yaml  structure.yaml  style.yaml  terminology.csv
scripts/: run_single_check.py  run_single_check.sh  start_dev.sh
src/doc_check/: __init__.py  config.py  main.py
src/doc_check/api/: __init__.py  app.py
src/doc_check/domain/: __init__.py  derivation.py  documents.py  findings.py  rule_drafts.py  rules.py
src/doc_check/parsers/: __init__.py  docx_reader.py  location_index.py
src/doc_check/persistence/: __init__.py  models.py  repositories.py
src/doc_check/reports/: __init__.py  comment_writer.py  summary_builder.py
tests/: __init__.py  conftest.py
tests/integration/: test_aeos_ruleset_execution.py  test_annotated_docx_output.py  test_artifact_creation_api.py  test_check_flow.py  test_docx_fixture_parsing.py  test_retention_cleanup.py  test_review_actions.py  test_rule_draft_flow.py  test_rule_draft_pages.py  test_rules_pages.py  test_single_check_script.py
tests/support/: __init__.py  app_config.py  docx_samples.py
tests/unit/: test_config.py
(+57 files in other folders)
